tests/run-pass/typeck/infix.rs
//! SKIP

fn main() {
    let a: int = 2 + 2;
    let b: bool = true && false;
    let c: int = 2 | 2;
    let d: bool = true | true;
    let e: bool = 5 <= 2;
}